<resources>
    <string name="app_name">George\'s To Do List</string>
    <string name="action_settings">Settings</string>
    <string name="name">Task:</string>
    <string name="location">Description:</string>
    <string name="type">Type:</string>
    <string name="mammal">Mammal</string>
    <string name="bird">Bird</string>
    <string name="reptile">Reptile</string>
    <string name="save">Save</string>
    <string name="hint_title">Enter task here</string>
    <string name="hint_description">Enter description here</string>
    <string name="hint_due_date">Enter due date</string>
    <string name="hint_add_info">Additional information here</string>

    // Zoo Area Names
    <string-array name="zoo_areas">
        <item>Desolation Desert</item>
        <item>Swamp of Sorrows</item>
        <item>Jungle of Joylessness</item>
        <item>Rueful Rainforest</item>
        <item>Martyrs Mesa</item>
        <item>Canyon of Cries</item>
        <item>Forbidden Forest</item>
        <item>Sinister Sanctuary</item>
        <item>Abnormal Aviary</item>
        <item>Poisonous Plains</item>
    </string-array>

    // Alert strings
    <string name="alert_title">Task Title Missing</string>
    <string name="alert_message">Please enter a task</string>
    <string name="sample_date">7/4/21</string>
    <string name="tasktitle">Title:</string>
    <string name="taskdescription">Description:</string>
    <string name="taskduedate">Due Date:</string>
    <string name="taskaddinfo">Add. Info:</string>
    <string name="hintduedate">Enter due date</string>

</resources>

